--- a/paper.tex
+++ b/paper.tex
@@ -135,7 +135,7 @@ To allow for the exploration of the relative effects of model parameters and spa
 In order to test for the influence of spatial initial conditions on model outputs, we use a systematic method to compare phase diagrams. We define a phase diagram as the vector of model outputs considered as a function of model parameters. Technically, because of stochasticity, we represent the output of the model for a given combination of parameter values as the median of the final values of an output indicator obtained for the replications of the model initialized with this combination of parameters.\\
 
 %Comparing phase diagrams is useful because it allows us to compare the 
-Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic (with around 50 different spatial configurations in our applications). A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. We propose to use a relative distance between two phase diagram corresponding to the share of between-diagrams variability relative to their internal variability, given formally by
+Indeed, we have as many phase diagrams than we have spatial grids, what makes a qualitative visual comparison not realistic (with around 50 different spatial configurations in our applications). A solution is to use systematic quantitative procedures. To our knowledge there exist no well established method to compare phase diagrams in agent-based modeling and geosimulation literature. We propose to use a relative distance between two phase diagram corresponding to the share of between-diagrams variability relative to their internal variability, given formally in the case of a one-dimensional phase diagram by
 
 %\comment[FL]{je ne comprends pas ce choix : pourquoi faut il considérer que des classes ayant une forte cohérence interne seraient plus éloignées? ou alors la question ne se pose pas en ces termes... Par ailleurs est ce que la formule est bien homogène du point de vue des dimensions? En tous cas je pense qu'on peut se passer de la formule à ce stade, éventuellement à mettre dans l'affichage des résultats si on en a besoin.}[(JR) pour l'homogénéité oui justement on prend $d^2$ car c'est les variances, on obtient une mesure sans unité ; ok pour omettre la formule ; pour l'interprétation, on regarde la distance relative, pour des classes à une certaine distance, si elles sont concentrées, cette distance sera plus sigificative que si elles ont une grande variabilité et peuvent se recouper ; par exemple si elles ont mêmes variance $\sigma^2$, alors si $d \simeq \sqrt{2} \sigma$ alors les nuages de points vont en gros se recouper sur leur moitié (cas gaussien idéal), tandis que si $d\gg \sigma$, le max d'un diagramme sera très loin du min de l'autre - on compare à la fois la distance relative et la distance de forme.]
 
@@ -145,7 +145,7 @@ Indeed, we have as many phase diagrams than we have spatial grids, what makes a 
 d_r\left(\vec{\alpha_1},\vec{\alpha_2}\right) = 2 \cdot \frac{d(f_{\vec{\alpha_1}},f_{\vec{\alpha_2}})^2}{Var\left[f_{\vec{\alpha_1}}\right] + Var\left[f_{\vec{\alpha_2}}\right]}
 \end{equation}
 
-where $f_{\vec{\alpha_i}}$ are the phase diagrams at given meta-parameters $\vec{\alpha_i}$. $d$ is a functional distance that we take simply as Euclidian distance. The variances are estimated within each phase diagram $f_{\vec{\alpha_i}}$.
+where $f_{\vec{\alpha_i}}$ are the phase diagrams at given meta-parameters $\vec{\alpha_i}$. $d$ is a functional distance that we take simply as Euclidian distance. The variances are estimated within each phase diagram $f_{\vec{\alpha_i}}$. For a multi-dimensional phase diagram, we sum these relative distances over the components. 
 
 
 The last methodological point which we need to emphasis is the relation between the workflow we introduce and model exploration workflows. The ideas of multi-modeling and extensive model exploration are nothing from new as ~\cite{openshaw1983data} already advocated for ``model-crunching'', but their effective use only begins to emerge thanks to the apparition of new methods and tools together with an explosion of computation capabilities. The model exploration platform OpenMole~\citep{reuillon2013openmole} allows to embed any model as a blackbox, write modulable exploration workflow using advanced methodologies such as genetic algorithms and distribute transparently the computation on large scale computation infrastructures such as clusters or computation grids. In our case, the workflow tool is a powerful way to embed both the sensitivity analysis and the meta-sensitivity analysis, and allow to couple any generator with any model in a straightforward way as soon as the model can take its spatial configuration as input or from an input file. In this paper, we use the OpenMole platform for spatial environment and model coupling, placing ourselves in the renewed framework of multi-modelling claimed by \citet{cottineau2015modular}.
@@ -178,7 +178,9 @@ The spatial generator applies an urban morphogenesis model \citep{Batty2007}, wh
 %%%%%%%%%%%%%%%%%%%%%%
 %\subsection{Including a (typical) variety of initial conditions in the sensitivity analysis}
 
-In order to generate density grids which correspond to empirical density distributions, we select among the generated grids using an objective function which matches the point cloud of 110 metropolitan areas in Europe described by four dimensions of spatial structure : their concentration index, hierarchy index, centrality index and continuity index (cf. \cite{LeNechet2015}). We sample the meta-parameter space using a Latin Hypercube Sampling, which is a convenient technique to have a point cloud with high discrepancy. We sample 2000 points in the 4-dimensional space of parameters {$\alpha$, $\beta$, $n$, $N$}. It yields a subset of 170 interesting grids matching empirical densities, which constituted our set of different initial spatial conditions. These are further clustered into three classes of morphology: compact (e.g. Vienna), polycentric (Liege) and discontinuous (Augsburg) in order to evaluate the non-trivial effects of urban form on simulation results. We select 15 grids of each type to work with in the computation of sensitivity analysis. \comment[FL]{pourquoi 15?} \comment[FL]{dire explicitement ce qu'on va faire avec ces catégories dans la partie résultats?}
+In order to generate density grids which correspond to empirical density distributions, we select among the generated grids using an objective function which matches the point cloud of 110 metropolitan areas in Europe described by four dimensions of spatial structure : their concentration index, hierarchy index, centrality index and continuity index (cf. \cite{LeNechet2015}). We sample the meta-parameter space using a Latin Hypercube Sampling, which is a convenient technique to have a point cloud with high discrepancy. We sample 2000 points in the 4-dimensional space of parameters {$\alpha$, $\beta$, $n$, $N$}. It yields a subset of 170 interesting grids matching empirical densities, which constituted our set of different initial spatial conditions. These are further clustered into three classes of morphology: compact (e.g. Vienna), polycentric (Liege) and discontinuous (Augsburg) in order to evaluate the non-trivial effects of urban form on simulation results. We select 15 grids of each type to work with in the computation of sensitivity analysis, obtaining a total of 45 spatial configurations to compare (as we will see, the significant number of model runs needed to establish each phase diagram imposes a computational limit on this number of configurations).
+
+%\comment[FL]{pourquoi 15?} \comment[FL]{dire explicitement ce qu'on va faire avec ces catégories dans la partie résultats?}
 
 
 
@@ -189,19 +191,18 @@ In the following section, we briefly recall the main components of the two ``cla
 \subsection{Case study models}
 
 
-Schelling's model consists in an abstract urban housing market where agents of different nature sense their environment, evaluate their satisfaction in terms of neighbourhood composition, and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tended to produce segregated patterns because of the complexity of their local interactions. The main parameters of this model are the tolerance level (\% of agents similar to {\it ego}), the scope of sensing and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the spatial distribution of housing capacity in this project, using the generated grids. \comment{We extend the implementation of... The outcome of the model is measured as a phase diagram of segregation level (Dissimilarity, Moran's I, Entropy, Exposure, all four of them?). .}\\
+Schelling's model consists in an abstract urban housing market where agents of different nature sense their environment, evaluate their satisfaction in terms of neighbourhood composition, and relocate if unsatisfied. It has been shown by \cite{Schelling1969} that even tolerant agents tended to produce segregated patterns because of the complexity of their local interactions. The main parameters of this model are the tolerance level (\% of agents similar to {\it ego}), the scope of sensing and the percentage of vacant spaces in the housing market. In addition, we are interested in testing the impact of the spatial distribution of housing capacity in this project, using the generated grids. The outcome of the model is measured as a phase diagram of segregation level, described by the combination of several indicators: Dissimilarity, Moran's Index, Entropy~\citep{brown2006spatial}.
 
 Sugarscape is a model of resource extraction which simulates the unequal distribution of wealth within a heterogenous population \citep{EpsteinAxtell1996}. Although it {\it "is designed to study the interaction of many plausible social mechanisms"} \citep[p.125]{Axtelletal1996}, we refer in this paper to the first (and simplest) version of the model, where {\it "processes allow its agents to look for, move to, and eat a resource ("sugar") which grows on its toroidal array of cells"}. Agents of different vision scopes and different metabolisms harvest a self-regenerating resource available heterogeneously in the initial landscape, they settle and collect this resource, which leads some of them to survive and others to perish. The main parameters of this model are the number of agents, their minimal and maximal resource. In addition, we are interested in testing the impact of the spatial distribution of the resource in this project, using the generated grids. We extend the implementation with agents wealth distribution of~\citet{li2009netlogo}. The outcome of the model is measured as a phase diagram of an index of inequality for resource distribution (Gini index). 
 
 
 \subsection{Experiment design}
-For Schelling's model, we explore a grid of a basic parameter space of the model, which is composed of two dimensions: the minimum proportion of similar agents required in the neighbourhood for the agent to be satisfied (or intolerance level) $S\in \left[0;1\right]$ and the vacancy rate of the city $V\in \left[0;1\right]$, which then defines the number of green and red agents, present in equal proportion for this experiment. Each parameter is binned into 10 values, giving 1000 parameter points. \comment[JR]{apparemment le sampling est sobol ou lhs pour l'espace des paramètres}
-We run 100 repetitions for each configuration, what yield reasonable convergence properties. The initial spatial configuration varies across 45 different grids, chosen among the ones which are most representative of the three types of urban morphology: 15 compact grids (like Vienna, cf figure \ref{fig:densityTypes}), 15 polycentric grids (like Liege) and 15 discontinuous grids (like Augsburg). The full experiment thus equates to 4,500,000 simulations (1000 parameter combinations x 45 density grids x 100 replications). We use OpenMOLE to distribute the computation, and apply segregation measures to characterise the results.
+For Schelling's model, we explore a grid of a basic parameter space of the model, which is composed of two dimensions: the minimum proportion of similar agents required in the neighbourhood for the agent to be satisfied (or intolerance level) $S\in \left[0;1\right]$ and the vacancy rate of the city $V\in \left[0;1\right]$, which then defines the number of green and red agents, present in equal proportion for this experiment. We sample 1000 parameter values using a Sobol sampling and run 100 repetitions for each configuration. The initial spatial configuration varies across 45 different grids, chosen among the ones which are most representative of the three types of urban morphology: 15 compact grids (like Vienna, cf figure \ref{fig:densityTypes}), 15 polycentric grids (like Liege) and 15 discontinuous grids (like Augsburg). The full experiment thus equates to 4,500,000 simulations (1000 parameter combinations x 45 density grids x 100 replications). We use OpenMOLE to distribute the computation, and apply segregation measures to characterise the results.
 
 For Sugarscape, we explore a grid of a basic parameter space of the model, which is composed of three dimensions: the population of agents $P\in \left[10;510\right]$, the minimal initial agent resource $s_{-}\in \left[10;100\right]$ and the maximal initial agent resource $s_{+}\in \left[110;200\right]$. Each parameter is binned into 10 values, giving 1000 parameter points. We run 50 repetitions for each configuration, what yield reasonable convergence properties. The initial spatial configuration varies across 50 different grids, generated by sampling meta-parameters for the generator in a LHS. We did not use the clustered grids to test the flexibility of our framework, which is demonstrated in this case by a direct sequential coupling of the generator and the model. Indeed, because the density distribution refers to the distribution of resource rather than to the representation of a city structure, we do not need the typology of urban density in this experiment. The full experiment thus equates to 2,500,000 simulations (1000 parameter combinations x 50 density grids x 50 replications). 
 
 
-We chose different design of experiments, both for meta-parameters and for the phase diagram, to demonstrate the robustness of the method.
+We choose different design of experiments, both for meta-parameters and for the phase diagram, to demonstrate the robustness of the method to technical choices. In principle, our workflow applies with any manner to generate a spatial configuration (even taking real configurations) and any manner to establish phase diagrams.
 
 
 
@@ -210,25 +211,13 @@ We chose different design of experiments, both for meta-parameters and for the p
 \section{Results}
 %%%%%%%%%%%%%%%%%%%%%%
 
-\comment[FL]{il faudrait peut être davantage renforcer l'analyse a propos de figure 1 de si c'est plutôt les mu parameters ou les spatial parameters qui ont une grosse influence sur les résultats.}[(JR) assez explicite pour sugarscape, j'ai rajouté un peu tout de même.]
+%\comment[FL]{il faudrait peut être davantage renforcer l'analyse a propos de figure 1 de si c'est plutôt les mu parameters ou les spatial parameters qui ont une grosse influence sur les résultats.}[(JR) assez explicite pour sugarscape, j'ai rajouté un peu tout de même.]
 
 \subsection{Quantitative variation across grids}
-\paragraph{Schelling} 
-Within a standard Schelling model (i.e. initialised with a uniform density grid), \citet{Gauvinetal2009} have built the phase diagram of segregation patterns depending on the combination of parameter values. For high levels of tolerance ($S < 0.25$), there is no segregation. For high values of vacancies ($V > 0.65$) and low values of tolerance ($S > 0.5$), these is a diluted segregation state where homogeneous communities are separated from other by large empty buffers. Finally, for low values of vacancies ($V < 0.2$) and low values of tolerance ($S > 0.7$), the model is frozen in a state where everyone is unhappy but no-one can express their intolerant behaviour due to the lack of free spaces. Between these extreme cases, the model gives rise to segregated states where homogeneous communities adjoin one another. The objective of this quantitative experiment is to evaluate to which extent this phase diagram is modified when different density grids are applied. 
-
-
-%%%%%%%%%%%%%
-\begin{figure}
-\centering
-\includegraphics[width=0.48\textwidth]{figures/schelling-relativedistance_metaparams}
-\includegraphics[width=0.48\textwidth]{figures/schelling-relativedistance_morphspace}
-\caption{\textbf{Relative distances of phase diagrams to the reference across grids for the Schelling model.} \label{fig:schelling-distance-meta}}
-\end{figure}
-%%%%%%%%%%%%%
 
 
 
-\paragraph{Sugarscape} We measure the distance of all 3-dimensional phase diagrams to the reference phase diagram computed on the default model setup, which is a bi-centric symmetric configuration (see Fig.~\ref{fig:sugarscape-distance-meta} for its morphological positioning regarded generated grids), using equation~\ref{eq:phase-distance} with the L2 distance to ensure direct interpretability. \comment[CC]{il manque les equations} Indeed, it gives in that case the average squared distance between corresponding points of the phase diagrams, relative to the average of the variance of each. Therefore, values greater than 1 will mean that inter-diagram variability is more important than intra-diagram variability.
+\paragraph{Sugarscape} We measure the distance of all phase diagrams to the reference phase diagram computed on the default model setup, which is a bi-centric symmetric configuration (see Fig.~\ref{fig:sugarscape-distance-meta} for its morphological positioning regarded generated grids), using the relative measure defined in equation~\ref{eq:phase-distance}. Indeed, it gives in that case the average squared distance between corresponding points of the phase diagrams, relative to the average of the variance of each. Therefore, values greater than 1 will mean that inter-diagram variability is more important than intra-diagram variability.
 
 
 % summary stats
@@ -268,6 +257,30 @@ Another way of quantifying the density grids, instead of looking at the meta-par
 %%%%%%%%%%%%%
 
 
+
+\paragraph{Schelling} 
+Within a standard Schelling model (i.e. initialised with a uniform density grid), \citet{Gauvinetal2009} have built the phase diagram of segregation patterns depending on the combination of parameter values. For high levels of tolerance ($S < 0.25$), there is no segregation. For high values of vacancies ($V > 0.65$) and low values of tolerance ($S > 0.5$), these is a diluted segregation state where homogeneous communities are separated from other by large empty buffers. Finally, for low values of vacancies ($V < 0.2$) and low values of tolerance ($S > 0.7$), the model is frozen in a state where everyone is unhappy but no-one can express their intolerant behaviour due to the lack of free spaces. Between these extreme cases, the model gives rise to segregated states where homogeneous communities adjoin one another. The objective of this quantitative experiment is to evaluate to which extent this phase diagram is modified when different density grids are applied. We show in Fig.\ref{fig:schelling-distance-meta} the values of the relative distance as a function of meta-parameters and in the reduced morphological space, in a way similar to the analyse done with Sugarscape before. Variations are less considerable than for Sugarscape across phase diagrams, but values close to 1 show that several configurations are as much sensitive to space than to their parameters. We will focus in the following in a qualitative characterisation of variations.
+
+
+%%%%%%%%%%%%%
+\begin{figure}
+\centering
+\includegraphics[width=0.48\textwidth]{figures/schelling-relativedistance_metaparams}
+\includegraphics[width=0.48\textwidth]{figures/schelling-relativedistance_morphspace}
+\caption{\textbf{Relative distances of phase diagrams to the reference across grids for the Schelling model.} Each point corresponds to a spatial configuration and colour gives the relative distance to one of the phase diagrams. We show them in the meta-parameter space (Left) and in the reduced morphological space (Right).\label{fig:schelling-distance-meta}}
+\end{figure}
+%%%%%%%%%%%%%
+
+
+
+
+
+\subsection{Qualitative variations}
+\paragraph{Sugarscape} We now check the sensitivity in terms of qualitative behavior of phase diagrams. We show the phase diagrams for two very opposite morphologies in term of sprawling, but controlling for aggregation with the same $PC2$ value. These correspond to the green and blue frames in Fig.~\ref{fig:sugarscape-distance-pca}. The behaviors are rather stable for varying $s_+$, what means that the poorest agents have a determinant role in trajectories. The two examples have not only a very distant baseline inequality (the ceiling of the first 0.35 is roughly the floor of the second 0.3), but their qualitative behavior is also radically opposite: the sprawled configuration gives inequalities decreasing as population decreases and decreasing as minimal wealth increases, whereas the concentrated one gives inequalities strongly increasing as population decreases and also decreasing with minimal weights but significantly only for large population values. The process is thus completely inverted, what would have significant impacts if one tried to schematise policies from this model. To interpret these behavior in terms of grid shape, we observe that the difference between the two grids is mainly on average distance and entropy: in a nutshell, the first grid is much more dispersed and disorganised than the second. In sprawled spaces, inequalities are thus fostered by a lack of minimal local ressources, whereas population will drive inequality in concentrated spaces.
+
+%This second example confirms thus the importance of sensitivity of simulation models to the initial spatial conditions.
+
+
 % phase diagrams -> ok well different qualitatively
 %          spAlpha spDiffsteps spDiffusion spGrowth spPopulation
 % id=27 : 0.7913103    2.376837   0.1440293 157.4147 4852.746
@@ -286,11 +299,6 @@ Another way of quantifying the density grids, instead of looking at the meta-par
 %%%%%%%%%%%%%
 
 
-\subsection{Qualitative variations}
-\paragraph{Sugarscape} We now check the sensitivity in terms of qualitative behavior of phase diagrams. We show the phase diagrams for two very opposite morphologies in term of sprawling, but controlling for aggregation with the same $PC2$ value. These correspond to the green and blue frames in Fig.~\ref{fig:sugarscape-distance-pca}. The behaviors are rather stable for varying $s_+$, what means that the poorest agents have a determinant role in trajectories. The two examples have not only a very distant baseline inequality (the ceiling of the first 0.35 is roughly the floor of the second 0.3), but their qualitative behavior is also radically opposite: the sprawled configuration gives inequalities decreasing as population decreases and decreasing as minimal wealth increases, whereas the concentrated one gives inequalities strongly increasing as population decreases and also decreasing with minimal weights but significantly only for large population values. The process is thus completely inverted, what would have significant impacts if one tried to schematise policies from this model. To interpret these behavior in terms of grid shape, we observe that the difference between the two grids is mainly on average distance and entropy: in a nutshell, the first grid is much more dispersed and disorganised than the second. In sprawled spaces, inequalities are thus fostered by a lack of minimal local ressources, whereas population will drive inequality in concentrated spaces.
-
-%This second example confirms thus the importance of sensitivity of simulation models to the initial spatial conditions.
-
 
 
 \paragraph{Schelling} In this qualitative exploration of the effect of initial spatial conditions on the results of Schelling's model, we use the classification of grids into three morphological types (cf. figure \ref{fig:densityTypes}). In particular, we want evaluate to which extent the typology summarises the spatial effects, and so if one type of urban form or the other enhances or mutes the segregation mechanism of the model, or interacts differently with the model parameters. This experiment aims at suggesting topical conclusions on urban morphology, beyond the technical conclusions already obtained with respect to simulation sensitivity.
@@ -301,9 +309,9 @@ Another way of quantifying the density grids, instead of looking at the meta-par
 
 \begin{table*}[]
 \centering
-\caption{\textbf{Regression of the segregation level of Schelling simulation with order parameters and type of city grid.} *** means that the estimate is significant.}
+\caption{\textbf{Regression of the segregation level of Schelling simulation with order parameters and type of city grid.} *** means that the estimate is significant at the 0.01 level.}
 \label{tab:regressionSchelling}
-\begin{adjustwidth}{-0.5cm}{-0.5cm}
+\begin{adjustwidth}{-1cm}{-1cm}
 \begin{tabular}{|m{2.5cm}|ll|ll|ll|}
 \hline
 Simulation outcome by segregation index:    & \multicolumn{2}{c|}{\textbf{Dissimilarity}}   & \multicolumn{2}{c|}{\textbf{Entropy}} & \multicolumn{2}{c|}{\textbf{Moran's I}} \\ \hline
@@ -335,15 +343,19 @@ We consider that the method presented holds great potential for strengthening ge
 
 \subsection{Limits}
 
-\paragraph{Comparing phase diagrams.} Comparing phase diagrams is as we saw not straightforward, and further developments of our method imply testing alternative methods for this particular point. For example in the case of the Schelling model, an anisotropic spatial segregation index (giving the number of clusters found and in which region in the parameter spaces they are roughly situated) would differentiate strong \emph{meta phase transitions} (phase transitions in the space of meta parameters). The use of metrics comparing spatial distributions, such as the Earth Movers Distance which is used for example in Computer Vision to compare probability distributions~\cite{rubner2000earth}, or the comparison of aggregated transition matrices of the dynamic associated to the potential described by each distribution, would also be potential tools. Map comparison methods, popular in environmental sciences \comment[MLT]{Et pas en géo? Qu'est-ce que ces méthodes ont de particulier?}, provide numeral tools to compare two dimensional fields~\cite{visser2006map}. To compare a spatial field evolving in time, elaborated methods such as Empirical Orthogonal Functions that isolates temporal from spatial variations, would be applicable in our case by taking time as a parameter dimension, but these have been shown to perform similarly to direct visual inspection when averaged over a crowdsourcing~\cite{10.1371/journal.pone.0178165}. Note that with the intuitive index we used, more subtle distances such as the Earth's Mover Distance can be used.
+\paragraph{Comparing phase diagrams.} Comparing phase diagrams is as we saw not straightforward, and further developments of our method imply testing alternative methods for this particular point. For example in the case of the Schelling model, an anisotropic spatial segregation index (giving the number of clusters found and in which region in the parameter spaces they are roughly situated) would differentiate strong \emph{meta phase transitions} (phase transitions in the space of meta parameters). The use of metrics comparing spatial distributions, such as the Earth Movers Distance which is used for example in Computer Vision to compare probability distributions~\cite{rubner2000earth}, or the comparison of aggregated transition matrices of the dynamic associated to the potential described by each distribution, would also be potential tools. Map comparison methods, popular in environmental sciences %\comment[MLT]{Et pas en géo? Qu'est-ce que ces méthodes ont de particulier?}
+, provide numeral tools to compare two dimensional fields~\cite{visser2006map}. To compare a spatial field evolving in time, elaborated methods such as Empirical Orthogonal Functions that isolates temporal from spatial variations, would be applicable in our case by taking time as a parameter dimension, but these have been shown to perform similarly to direct visual inspection when averaged over a crowdsourcing~\cite{10.1371/journal.pone.0178165}. The investigation of diverse approaches to systematically quantify differences between phase diagrams is an important potential development of our method.
 
 
-\paragraph{Platform constrains and docking challenges.} An aspect that we have not touched upon in the article with respect to the sensitivity to initial spatial conditions is the importance of the modelling platform as a constraint in the formalisation of space. For example, the use of Netlogo fosters the use of raster/grid spatial inputs rather than vector elements. Its toroidal default setting might also have influenced the work of many modellers who did not question explicitly the representation of space. This issue is part of the docking challenge \citep{Axtelletal1996} (i.e. checking if two models can produce the same results), but more generally, it involves a description of the model and its spatial requirements more detailed than what is currently the rule. \comment[FL]{NetLogo qui influence la formalisation de l'espace dans les modèles alors que formalisation de ce dernier peut être plus poussée dans la description du modèle original.}[(JR) bonne idée, y'a pas mal d'exemples ou il faut pas mal contourner l'usage ``naturel'' de Netlogo pour s'en sortir - sur les représentations raster/vecteur c'est souvent un dilemne et ça peut induire des biais d'implémentation - je vais essayer de trouver un exemple simple (ceux que j'ai là trop usine à gaz, exemple Lutecia)]
-
-\subsection{Opportunities/extensions}
+\paragraph{Platform constrains and docking challenges.} An aspect that we have not touched upon in the article with respect to the sensitivity to initial spatial conditions is the importance of the modelling platform as a constraint in the formalisation of space. For example, the use of Netlogo fosters the use of raster/grid spatial inputs rather than vector elements. Its toroidal default setting might also have influenced the work of many modellers who did not question explicitly the representation of space. This issue is part of the docking challenge \citep{Axtelletal1996} (i.e. checking if two models can produce the same results), but more generally, it involves a description of the model and its spatial requirements more detailed than what is currently the rule.
 
 
-\paragraph{Reproducibility/Applicability.} \comment[CC]{Lancer des pistes sur comment travailler l'effet de la grille pour d'autres types de modélisation type modèles appliqués.}
+% \comment[FL]{NetLogo qui influence la formalisation de l'espace dans les modèles alors que formalisation de ce dernier peut être plus poussée dans la description du modèle original.}[(JR) bonne idée, y'a pas mal d'exemples ou il faut pas mal contourner l'usage ``naturel'' de Netlogo pour s'en sortir - sur les représentations raster/vecteur c'est souvent un dilemne et ça peut induire des biais d'implémentation - je vais essayer de trouver un exemple simple (ceux que j'ai là trop usine à gaz, exemple Lutecia)]
+
+\subsection{Opportunities and extensions}
+
+
+\paragraph{Reproducibility and Applicability.} \comment[CC]{Lancer des pistes sur comment travailler l'effet de la grille pour d'autres types de modélisation type modèles appliqués.}
 Although the applications we present here are limited by the simplicity of the models, we think that the method could (and should) be applied to larger models including domain mechanisms and more empirical initialisation data, for example synthetic populations. The sensitivity analysis to initial spatial conditions could then be either a replication on the spatial allocation of the synthetic population, or a series of spatial permutations of the empirical spatial inputs.
 We want foster this extension of our work by releasing the density grids also generated, as well as the generating work-flow \comment[CC]{add link to github repo}. Another way to go would be to implement additional generators, such as social networks \citep{alizadeh2016generating} with localised agents. 
 
