--- a/spacematters.bib
+++ b/spacematters.bib
@@ -11,6 +11,17 @@
 }
 
 
+@article{brown2006spatial,
+  title={Spatial segregation, segregation indices and the geographical perspective},
+  author={Brown, Lawrence A and Chung, Su-Yeul},
+  journal={Population, space and place},
+  volume={12},
+  number={2},
+  pages={125--143},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
 @article{smith2002predicting,
   title={Predicting the spatial dynamics of rabies epidemics on heterogeneous landscapes},
   author={Smith, David L and Lucey, Brendan and Waller, Lance A and Childs, James E and Real, Leslie A},
